kustomize-guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui-ingress
spec:
  rules:
  - host: guestbook.traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-guestbook-ui
            port:
              number: 80    # Port of the Guestbook UI Service
